# ManuelEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py  conanfile.txt
Templates/: TemplateLibModule.sh  TemplateSrcModule.sh
lib/: CMakeLists.txt
lib/Manuel/: CMakeLists.txt
lib/Manuel/include/Manuel/: EngineDetail.hpp  Handle.hpp  Log.hpp  ManagedMemory.hpp  Result.hpp
lib/Manuel/src/: CMakeLists.txt  Log.cpp  Log.hpp  Logger.cpp  ManagedMemory.cpp  ManagedMemory_subset.cpp  Result.cpp  Result.hpp
lib/Manuel/test/: CMakeLists.txt  Logger.cpp  ManagedMemory.cpp
src/: CMakeLists.txt  main.cpp
